<resources>
    <string name="app_name">SQLite Database Test</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="symbolism">Symbolism</string>
    <string name="id">ID</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>